src/components/seatChart/SeatChart.scss
// All GTAS code is Copyright 2016, The Department of Homeland Security (DHS), U.S. Customs and Border Protection (CBP).
//
// Please see license.txt for details.

.seat-chart {
  margin-top: 20px;
  overflow: scroll;
  border-bottom: 1px solid rgb(185, 183, 183);
}
.seat-chart .row {
  flex-wrap: nowrap;
  margin: 10px 0px;
}
.right-of-middle-rows {
  margin-top: 30px !important;
}

.left-of-middle-rows {
  margin-bottom: 30px !important;
}

.seat-info-display {
  margin-top: 20px;
  justify-content: space-evenly;
  max-height: 50vh;
  overflow: scroll;

  .card {
    min-width: 300px;
    max-width: 400px;
    margin-bottom: 30px !important;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0, 0, 0.25);
  }
}

.seat-info-display > .card > .card-header {
  font-size: larger;
}

